[gd_scene load_steps=4 format=3 uid="uid://b6y6aamj134po"]

[ext_resource type="Script" uid="uid://dkolfjyp6xbsh" path="res://Games/juicyjutsu/ui/start_menu.gd" id="1_833ks"]
[ext_resource type="Texture2D" uid="uid://cashsqkf1um4k" path="res://Games/juicyjutsu/assets/backgrounds/Bambuswald.png" id="2_g8rs4"]
[ext_resource type="Texture2D" uid="uid://tf5cbjb5t5kc" path="res://Games/juicyjutsu/assets/labels/Saftiges_Jutsu.png" id="2_noct2"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_833ks")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="CenterContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
texture = ExtResource("2_noct2")
expand_mode = 5
stretch_mode = 4

[node name="PlayButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play Game"

[node name="BackButton" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="JuicyStartBG" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(320, 195)
scale = Vector2(0.416667, 0.393555)
texture = ExtResource("2_g8rs4")

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
